# murmurfs-packages

./: .gitignore  ANALYSIS.md  build_rpm.py  murmurfs-0.1.0-1.noarch.rpm  murmurfs_0.1.0_all.deb
murmurfs-pkg/DEBIAN/: control  postinst  prerm
murmurfs-pkg/usr/share/doc/murmurfs/: CLAUDE_GUIDE.md  DESIGN.md  PLAN.md  价值分析.md
murmurfs-pkg/usr/share/murmurfs/: README.md  fuse3_wrapper.py  pyproject.toml
murmurfs-pkg/usr/share/murmurfs/murmurfs/: __init__.py  branch.py  cli.py  config.py  cost.py  fs.py  intent.py  llm.py  merge.py  meta.py  mount.py  ops.py  squash.py  sync.py
skills/intent-first/: SKILL.md
