[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murmurfs"
version = "0.1.0"
description = "A FUSE filesystem where AI agents store intent, not content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fusepy>=3.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
murmurfs = "murmurfs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
